fixes margin-top on property container so the gap is not so big between the dates boxes and the properties

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,10 @@
  .container {
    margin-top: 50px
  }
+
+ #property {
+  margin-top: 20px
+}
  
  .container, h2 {
   text-align: center;
